--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
 body {
     padding: 0 8px;
     margin: 0 auto;
-    min-width: 750px;
-    font-family: monospace;
-    font-size: 1.2em;
+    font-family: sans-serif;
     overflow: auto;
+    min-width: 550px;
+}
 
-    width: -moz-min-content;
-    width: -webkit-min-content;
-    width: min-content;
+@media (min-width: 800px) {
+	body {
+		min-width: 85%;
+		width: -moz-min-content;
+	        width: -webkit-min-content;
+	        width: min-content;
+	}
 }
 
 header, nav > a.npos {
