--- a/css/style.css
+++ b/css/style.css
@@ -1,219 +1,76 @@
 body {
-    padding: 0 8px;
+    padding: 8px;
     margin: 0 auto;
-    font-family: sans-serif;
-    overflow: auto;
-    min-width: 550px;
-}
-
-@media (min-width: 800px) {
-	body {
-		min-width: 85%;
-		width: -moz-min-content;
-	        width: -webkit-min-content;
-	        width: min-content;
-	}
-}
-
-header, nav > a.npos {
-    color: gray;
-}
-
-header img {
-    float: left;
-    height: 38px;
-    width: auto;
-}
-
-header div {
-    margin-left: 38px;
-}
-
-header div, footer {
-    padding-left: 6px;
-    height: 19px;
-}
-
-header a, footer a {
-    text-decoration: none;
-    color: beige;
-}
-
-header div#bot a {
-    color: maroon;
-}
-
-span.side, span.side, footer, header div#top {
-    background: maroon;
-}
-
-aside#greet {
-    margin: 0;
-    padding: 8px 38px;
-    text-align: center;
-}
-
-aside#meta, aside#toc {
-    padding: 8px;
-    margin-left: 8px;
-}
-
-aside#meta h4, aside#toc h4 {
-    margin: 4px;
-    font-size: 1.1em;
-}
-
-aside#toc ul {
-    padding: 0;
-    padding-left: 32px;
-}
-
-.text {
-    font-family: sans-serif;
-    font-size: 14px;
-    text-align: justified;
-}
-
-.text a {
-    text-decoration: underline;
-}
-
-content table {
-    border-collapse: collapse;
-}
-
-content table td {
-    margin: 0;
-    padding: 2px;
-    vertical-align: text-top;
-}
-
-content table.list a {
-    text-decoration: underline;
-}
-
-td.word {
-    width: 99%;
-}
-
-td.word span {
     font-family: monospace;
-    margin: 2px;
-    padding: 2px;
-    border-radius: 2px;
-    cursor: default;
+    max-width: 60em;
 }
 
-content tr:nth-child(4n) td.word span,
-content tr:nth-child(4n-1) td.word span {
-    background: white;
+@media (min-width: 550px) {
+    .narrow { display: none; }
+    
 }
 
-td.mat span {
-    color: green;
+@media (min-width: 350px) {
+    aside.side {
+	float: right;
+	margin-left: 8px;
+    }
 }
 
-td.mat span:hover {
-    background: green;
+@media (max-width: 550px) {
+    .wide { display: none; }
 }
 
-td.dma span {
-    color: red;
-}
-
-content tr:nth-child(4n-1) td.word.mat span:hover,
-content td.mat span:hover {
-    background: green;
+header {
     color: white;
-}
-
-content tr:nth-child(4n) td.word.dma span:hover,
-content td.dma span:hover {
-    background: red;
-    color: white;
-}
-
-td.dma span:hover {
-    background: red;
-}
-
-hr {
-    border-width: 1px;
-    border-style: solid;
-}
-
-#info {
+    background: black;
     padding: 8px;
-    margin: 0 0 8px 8px;
+}
+
+a {
+    color: red;
+    text-decoration: none;
+}
+
+aside {
+    background: #eee;
+    margin: 0;
+    padding: 8px;
 }
 
 table.list {
     width: 100%;
+    border-collapse: collapse;
+    margin-top: 4px;
 }
 
-nav {
+table.list td:nth-child(3) {
+    white-space: nowrap;
+    text-align: right;
+}
+
+table.list td {
     padding: 4px;
 }
 
-a, .text {
-    color: black;
-    text-decoration: none;
-}
-
-nav > a.npos {
-    pointer-events: none;
-    cursor: default;
-    color: gray;
-    font-weight: normal;
-}
-
-content table.list td:nth-child(2) {
-    white-space: normal;
-}
-
-content table.list td:nth-child(3) {
-    white-space: nowrap;
-}
-
-content table.list td {
-    padding: 2px;
-}
-
-content table.list tr:nth-child(n) td:first-child {
-    padding-bottom: 4px;
-}
-
-content table.list tr:nth-child(n+1) td:first-child {
-    padding-top: 4px;
-}
-
-aside#meta, aside#toc,
-header a.search, span.side, #info {
-    float: right;
+content table.list tr:nth-child(4n),
+content table.list tr:nth-child(4n-1) {
+    background: #eee;
 }
 
 hr {
-    border-color: beige;
+    border-width: 0;
+    border-bottom: 1px solid #111;
 }
 
-#info, aside, header,td.word span,
-content table.list tr:nth-child(4n),
-content table.list tr:nth-child(4n-1) {
-    background: beige;
+td.word span {
+    margin: 2px;
+    padding: 2px;
+    border-radius: 2px;
+    cursor: default;
+    color: white;
 }
 
-aside {
-    padding: 4px;
-}
+td.mat span { background: green; }
 
-dt, nav > a, header div#bot a.current,
-content tr > td:first-child,
-content table.list td:nth-child(3) > a {
-    font-weight: bold;
-}
-
-nav, aside#meta h4,
-content table.list td:nth-child(3),
-content table.list td:nth-child(3) > a {
-    text-align: right;
-}
+td.dma span { background: red; }
